--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WbApp</title>
-</head>
-<body>
+    <script>
+        // {
+        //   window.addEventListener("load", () => {
+        //     console.log("inside here");
+        //     if ("serviceWorker" in navigator) {
+        //       navigator.serviceWorker.register("./service-worker.js");
+        //     }
+        //   });
+        // }
+      </script>
+  </head>
+  <body>
     <div id="app"></div>
-</body>
+ 
+  </body>
+
 </html>
